[gd_scene load_steps=11 format=3 uid="uid://bytx1k82ge10s"]

[ext_resource type="Script" path="res://Src/Enemies/EnemyShooter.gd" id="1_oyjgp"]
[ext_resource type="Texture2D" uid="uid://dild4evyumi6y" path="res://Assets/Enemies/MainBox.svg" id="2_rvuy8"]
[ext_resource type="Script" path="res://Src/Player/ChargeComponent.gd" id="3_5ecov"]
[ext_resource type="Script" path="res://Src/components/HealthComponent.gd" id="4_o7afr"]
[ext_resource type="PackedScene" uid="uid://dge1l4yegtcma" path="res://Src/Enemies/gun.tscn" id="5_o37cj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_halpe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cv0wf"]
size = Vector2(36.1544, 36.0896)

[sub_resource type="CircleShape2D" id="CircleShape2D_x4kpi"]
radius = 29.3177

[sub_resource type="CircleShape2D" id="CircleShape2D_8waqy"]
radius = 795.187

[sub_resource type="CircleShape2D" id="CircleShape2D_w3qbg"]
radius = 944.104

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("navigation_agent") groups=["enemies"]]
scale = Vector2(0.991497, 0.995046)
collision_layer = 4
collision_mask = 5
script = ExtResource("1_oyjgp")
navigation_agent = NodePath("Navigation/NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_halpe")
texture = ExtResource("2_rvuy8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.0771837, 0.0448065)
shape = SubResource("RectangleShape2D_cv0wf")

[node name="charge_component" type="Node2D" parent="."]
script = ExtResource("3_5ecov")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]

[node name="RecalcTimer" type="Timer" parent="Navigation"]
wait_time = 0.2
autostart = true

[node name="health_component" type="Node2D" parent="."]
script = ExtResource("4_o7afr")

[node name="ExplodeRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeRadius"]
position = Vector2(0, -1.00498)
shape = SubResource("CircleShape2D_x4kpi")

[node name="Gun" parent="." node_paths=PackedStringArray("Charge_component") instance=ExtResource("5_o37cj")]
Charge_component = NodePath("../charge_component")

[node name="ShootRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootRadius"]
shape = SubResource("CircleShape2D_8waqy")

[node name="ShootTimer" type="Timer" parent="ShootRadius"]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_w3qbg")

[connection signal="timeout" from="Navigation/RecalcTimer" to="." method="_on_recalc_timer_timeout"]
[connection signal="health_depleted" from="health_component" to="." method="die"]
[connection signal="body_entered" from="ExplodeRadius" to="." method="_on_explode_radius_body_entered"]
[connection signal="body_entered" from="ShootRadius" to="." method="_on_shoot_radius_body_entered"]
[connection signal="body_exited" from="ShootRadius" to="." method="_on_shoot_radius_body_exited"]
[connection signal="timeout" from="ShootRadius/ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
